@@ -5018,3 +5018,4 @@ v0.92.0.11:
   - Fix missing switch test, solving problem with unresearched slimefun items allowing bypass of switch protections.
     - Closes #4065.
   - Fix trying to load non-existant residents in the friendslist.
+  - Remove unused plotManagementRevertSpeed from sql and townyworld.
